@startuml
'https://plantuml.com/class-diagram

class WebApp {
    +searchFlights(flightQuery: FlightQuery): FlightResults
    +getFlightStatus(flightDetails: FlightDetails): FlightStatus
}

class FlightController {
    +fetchFlightData(flightQuery: FlightQuery): FlightResults
    +fetchNearbyAirports(airport: String): AirportResults
}

class StrategyController {
    +setCurrentStrategy(strategy: String)
    +getCurrentStrategy(): String
}

class FlightService {
    -flightDataStrategy: FlightDataStrategy
    +setFlightDataStrategy(strategy: FlightDataStrategy)
    +fetchFlightData(flightQuery: FlightQuery): FlightResults
    +fetchNearbyAirports(airport: String): AirportResults
}

class StrategyService {
    -strategyConfig: StrategyConfig
    +setCurrentStrategy(strategy: String)
    +getCurrentStrategy(): String
}

interface FlightDataStrategy {
    +fetchFlightData(flightQuery: FlightQuery): FlightResults
}

class AeroDataBoxProvider {
    +fetchFlightData(flightQuery: FlightQuery): FlightResults
    +fetchNearbyAirports(airport: String): AirportResults
}

class FlightRadar24Provider {
    +fetchFlightData(flightQuery: FlightQuery): FlightResults
    +fetchNearbyAirports(airport: String): AirportResults
}

class StrategyConfig {
    -currentStrategy: String
    +setCurrentStrategy(strategy: String)
    +getCurrentStrategy(): String
}

' Relationships
WebApp --> FlightController : "Handles flight search"
WebApp --> StrategyController : "Manages strategy selection"
FlightController --> FlightService : "Requests flight data"
StrategyController --> StrategyService : "Delegates strategy handling"
FlightService o-- FlightDataStrategy : "Uses selected strategy"
StrategyService *-- StrategyConfig : "Stores current strategy"

FlightDataStrategy <|.. AeroDataBoxProvider : "Implements"
FlightDataStrategy <|.. FlightRadar24Provider : "Implements"

@enduml
